# continuation-method

./: LICENSE  MANIFEST.in  README.md  setup.cfg
EA/: EA_Iris.ipynb  EA_mnist.ipynb  perm.txt  plotResults.py
EA/Results/: iris_F_pareto_front.txt  iris_X_pareto_front.txt  mnist_F_pareto_front.txt
MNIST/: configuration.yaml  functions.py  job.py  plotResults.py
MNIST/Results/Results_det_0/: Info.txt  TestLoss
MNIST/Results/Results_iris/: TestLoss  accuracy
MNIST/Results/Results_sto_1/: TestLoss  TrainLoss  ValidLoss
cifar10/: cm_cifar10.py  initial_cnn_model.pth  length_number.txt  plotResults.py  ws_cifar10.py
cifar10/Results/Results_cm_sto/: Info.txt  L1NormAll  TestLoss  TrainLoss  accuracy
cifar10/Results/Results_ws_sto/: Info.txt  L1NormAll  TestAccuracy  TestLoss  TrainAccuracy  TrainLoss  accuracy
continuation_method.egg-info/: PKG-INFO  SOURCES.txt
predictor-corrector/: DataLoader.py  OwnDescent.py  configuration.yaml  configuration_iris.yaml  continuationTest.py  continuationTestCV.py  functions.py  functionsCV.py  helperFunctions.py  job.py  plotResults.py  plotResultsCV.py  weightedsumTest.py
predictor-corrector/Results/Results_cm_dt_iris/: Info.txt  TestAccuracy  TestLoss  TrainAccuracy  TrainLoss  Weights  accuracy
predictor-corrector/Results/Results_cm_sto/: Info.txt  L1NormAll  TestLoss  TrainLoss  accuracy
predictor-corrector/Results/Results_ws_sto/: Info.txt  L1NormAll  TestAccuracy  TestLoss  TrainAccuracy  TrainLoss
predictor-corrector/Results_CV/: Info.txt  L1NormAll  L1NormtestAll  TestLoss  TrainLoss  accuracy
(+114 files in other folders)
