[metadata]
name = continuation_method
version = 0.0.1
author = Amakor Augustina Chidinma
author_email = augustina.chidinma.amakor@uni-paderborn.de
description = Computing and plotting Pareto front for loss and L1-norm (regualrization path)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aamakor/continuation_method
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
Python_requires = >=3.8.8
include_package_data = True